Try a different way

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-language: dart
-dart:
-  - 2.1.0
-  - stable
-script:
-  - pub run test
+matrix:
+  include:
+    - dart: 2.1.0
+    - script:
+      - pub run test
