--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-matrix:
-  include:
-    - dart: 2.1.0
-    - script:
-      - pub run test
+language: dart
+dart_task:
+
+- test
+- dartanalyzer: --fatal-warnings lib
